--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   },
   "homepage": "https://github.com/mfarhan0304/Shippers-Transporters---Platform#readme",
   "dependencies": {
+    "apollo-boost": "^0.3.1",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-link-http": "^1.5.14",
+    "graphql": "^0.13.2",
     "graphql-yoga": "^1.17.4",
+    "node-fetch": "^2.5.0",
     "prisma-binding": "^2.3.10"
   }
 }
