--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node src/index.js",
+    "test": "mocha test/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -18,12 +19,10 @@
   },
   "homepage": "https://github.com/mfarhan0304/Shippers-Transporters---Platform#readme",
   "dependencies": {
-    "apollo-boost": "^0.3.1",
-    "apollo-cache-inmemory": "^1.5.1",
-    "apollo-link-http": "^1.5.14",
-    "graphql": "^0.13.2",
+    "easygraphql-tester": "^5.1.3",
+    "graphql-tester": "0.0.5",
     "graphql-yoga": "^1.17.4",
-    "node-fetch": "^2.5.0",
+    "mocha": "^6.1.4",
     "prisma-binding": "^2.3.10"
   }
 }
