--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/mfarhan0304/Shippers-Transporters---Platform#readme",
   "dependencies": {
+    "chai": "^4.2.0",
     "easygraphql-tester": "^5.1.3",
     "graphql-tester": "0.0.5",
     "graphql-yoga": "^1.17.4",
     "mocha": "^6.1.4",
-    "prisma-binding": "^2.3.10"
+    "prisma-binding": "^2.3.10",
+    "supertest": "^4.0.2"
   }
 }
